# tdss

./: README  tdss.cabal
Tdss/: Control.hs  Model.hs  View.hs
Tdss/Command/: Index.hs  Serve.hs
templates/: wrap.tpl
