name:          tdss
version:       0.4.0
synopsis:      Tokyo dystopia snap search
license:       BSD3
license-file:  LICENSE
author:        8c6794b6
maintainer:    8c6794b6@gmail.com
stability:     Experimental
category:      Web
build-type:    Simple
cabal-version: >=1.6
description:
  Simple web app for full text searching with using tokyo dystopia and snap web
  framework, including command line interface for indexing and serving the site.

source-repository head
  type: git
  location: http://github.com/8c6794b6/tdss

executable tdss
  main-is: tdss.hs
  ghc-options:
    -Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  build-depends:
    base == 4.*,
    blaze-builder,
    bytestring -any,
    cmdargs,
    mtl,
    containers -any,
    directory -any,
    directory-tree,
    snap-core,
    snap-server,
    heist,
    filepath -any,
    tagsoup,
    network,
    text,
    tokyodystopia-haskell >= 0.0.2,
    tokyocabinet-haskell >= 0.0.5,
    utf8-string,
    xmlhtml
